<resources>
    <string name="app_name">GatoPardoMoviles2</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="user_login">Correo Electronico</string>
    <string name="password_login">Contraseña</string>
    <string name="button_login">Inicia Sesión</string>
    <string name="title_activity_register">Registrarse</string>
    <string name="user_register">Username</string>
    <string name="email_register">Correo Electronico</string>
    <string name="password_register">Contraseña</string>
    <string name="checkBox">Acepto los Términos de Servicio y la Política de Privacidad"</string>
    <string name="button_register">Registro</string>
    <string name="action_sign_in">¿No tienes una cuenta?</string>
    <string name="action_sign_in1">Registrarse</string>
    <string name="action_sign_register">¿Ya tienes una cuenta?</string>
    <string name="action_sign_register1">Iniciar Sesión</string>
    <string name="title_activity_panel">¡Bienvenid@!</string>
    <string name="email_panel">Correo Electronico</string>
    <string name="password_panel">Contraseña</string>
    <string name="button_panel">Ir a los talleres</string>
    <string name="title_activity_workshops">Talleres</string>
    <string name="search_workshops">Encuentra tu taller</string>
    <string name="text_workshops">Ir a la web para más información</string>
    <string name="button_workshops">¡Separa tu cupo!</string>
    <string name="first_name">Primer nombre*</string>
    <string name="middle_name">Segundo nombre*</string>
    <string name="first_surname">Primer apellido*</string>
    <string name="second_last_name">Segundo apellido*</string>
    <string name="document_type">Tipo de documento</string>
    <string name="document_number">Número de documento*</string>
    <string name="email_form">Correo Electronico</string>
    <string name="course_name">Nombre del curso*</string>
    <string name="preferred_schedule">Hora de preferencia</string>
    <string name="button_send">Enviar</string>
    <string name="title1">Carvado de sellos</string>
    <string name="description1">Actividad creativa y manual que enseña las técnicas para diseñar, tallar y crear sellos personalizados a partir de materiales como goma o linóleo.</string>
    <string name="price1">$100.000</string>
    <string name="duration1">2 horas</string>
    <string name="cupo1">15 cupos</string>
    <string name="title2">Estampado de tela</string>
    <string name="description2">Taller de estampado de tela. Aprende a crear diseños únicos y personalizar tus prendas utilizando técnicas de estampado.</string>
    <string name="price2">$80.000</string>
    <string name="duration2">1 horas</string>
    <string name="cupo2">20 cupos</string>
    <string name="title3">Escultura en arcilla</string>
    <string name="description3">Taller de escultura en arcilla. Descubre las técnicas para modelar y esculpir figuras únicas con tus manos y la arcilla.</string>
    <string name="price3">$130.000</string>
    <string name="duration3">2 horas</string>
    <string name="cupo3">20 cupos</string>
    <string name="title4">Bordado</string>
    <string name="description4">Curso de bordado para principiantes. Aprende a crear hermosos diseños y bordar tus propias obras de arte sobre tela.</string>
    <string name="price4">$70.000</string>
    <string name="duration4">3 horas</string>
    <string name="cupo4">15 cupos</string>

    <string name="button_workshop">¡Separa tu cupo!</string>
    <string name="message">¡Gracias por registrarse al curso!</string>
    <string name="message1">En la web encontrará la información completa sobre todo lo que tienes que saber del curso.</string>
    <string name="message2">Volver al perfil</string>
</resources>
