<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#004F5A"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/main">

        <!-- Título del formulario -->
        <TextView
            android:id="@+id/registroTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Regístrate al curso"
            android:textSize="30sp"
            android:fontFamily="@font/andbasr"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Campos de entrada de texto -->
        <!-- Campos de entrada de texto -->
        <EditText
            android:id="@+id/nameOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/nameSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/middle_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/surnameOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/first_surname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/surnameSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/second_last_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/documentType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/document_type"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/document_number"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/emailFormulary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/email_form"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFFFFF"
            android:hint="Nombre del curso*"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/preferredSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/preferred_schedule"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <!-- Botones de Enviar y Finalizar alineados horizontalmente -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/sendAndNavigateButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/button_send"
                android:textSize="20sp"
                android:backgroundTint="#FFFFFF"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/andbasr"
                android:padding="15dp"
                app:cornerRadius="8dp"
                android:layout_marginEnd="8dp" />



        </LinearLayout>

    </LinearLayout>
</ScrollView>
